--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Use context
       run: kubectl config use-context gke_striped-proxy-330418_europe-central2-b_cluster-1
     - name: Deploy to K8s
-      run: kubectl apply -f k8s/
+      run: kubectl apply -f hello-kubernete/deploy/helm/hello-kubernetes/templates/deployment.yaml
