--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -44,6 +44,7 @@ jobs:
       uses: google-github-actions/get-gke-credentials@v0
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GAR_LOCATION }}
 
     # Build the Docker image
     - name: Build
