--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -12,6 +12,7 @@ env:
   DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
   REPOSITORY: samples # TODO: update to Artifact Registry docker repository
   IMAGE: hell_sbis
+  TAG: 1.0.0
 
 jobs:
   setup-build-publish-deploy:
@@ -36,9 +37,6 @@ jobs:
       with:
         credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
-    - name: Docker configuration
-      run: |-
-        echo ${{ secrets.GITLAB_P }} |docker login -u ${{ secrets.GITLAB_U }} --password-stdin  registry.gitlab.com
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
@@ -49,11 +47,10 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |-
-          docker build --tag "$IMAGE" --file hello-kubernete/src/app/Dockerfile hello-kubernete/src/app/
-    # Push the Docker image to Google Artifact Registry
-    - name: Publish
-      run: |-
-        docker push "$IMAGE"
+          echo ${{ secrets.GITLAB_P }} |docker login -u ${{ secrets.GITLAB_U }} --password-stdin  registry.gitlab.com
+          docker build --tag "$IMAGE:$TAG" --file hello-kubernete/src/app/Dockerfile hello-kubernete/src/app/
+          docker push "$IMAGE:$TAG"
+
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
@@ -63,7 +60,7 @@ jobs:
     - name: Deploy
       run: |- 
         # replacing the image name in the k8s template
-        ./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/IMAGE=registry.gitlab.com/mishneg/$IMAGE
+        ./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/IMAGE:TAG=registry.gitlab.com/mishneg/$IMAGE:$TAG
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
