--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -37,6 +37,9 @@ jobs:
       with:
         credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
+    - name: Docker configuration
+      run: |-
+        echo ${{ secrets.GITLAB_P }} |docker login -u ${{ secrets.GITLAB_U }} --password-stdin  registry.gitlab.com
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
@@ -47,10 +50,11 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |-
-          echo ${{ secrets.GITLAB_P }} |docker login -u ${{ secrets.GITLAB_U }} --password-stdin  registry.gitlab.com
           docker build --tag "$IMAGE:$TAG" --file hello-kubernete/src/app/Dockerfile hello-kubernete/src/app/
-          docker push "$IMAGE:$TAG"
-
+    # Push the Docker image to Google Artifact Registry
+    - name: Publish
+      run: |-
+        docker push "registry.gitlab.com/mishneg/hello_sbis/$IMAGE:$TAG"
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
@@ -60,7 +64,7 @@ jobs:
     - name: Deploy
       run: |- 
         # replacing the image name in the k8s template
-        ./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/IMAGE:TAG=registry.gitlab.com/mishneg/$IMAGE:$TAG
+        ./kustomize edit set image LOCATION-docker.pkg.dev/user/PROJECT_ID/IMAGE:TAG=registry.gitlab.com/mishneg/hello_sbis/$IMAGE:$TAG
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
