--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Deploy
       run: |- 
         # replacing the image name in the k8s template
-        ./kustomize edit set image GITLAB/USER/PROJECT/IMAGE:TAG=registry.gitlab.com/mishneg/hello_sbis/$IMAGE:$TAG
+        ./kustomize edit set image GITLAB/USER/IMAGE:TAG=registry.gitlab.com/mishneg/$IMAGE:$TAG
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
