--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -54,7 +54,7 @@ jobs:
     # Push the Docker image to Google Artifact Registry
     - name: Publish
       run: |-
-        docker push "registry.gitlab.com/mishneg/hello_sbis/$IMAGE:$TAG"
+        docker push "registry.gitlab.com/mishneg/$IMAGE:$TAG"
     # Set up kustomize
     - name: Set up Kustomize
       run: |-
