--- a/hello-kubernete/deploy/helm/hello-kubernetes/templates/service.yaml
+++ b/hello-kubernete/deploy/helm/hello-kubernetes/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "hello-kubernetes.name" . }}
-  labels:
-    {{- include "hello-kubernetes.labels" . | nindent 4 }}
+  name: hello-kubernetes
 spec:
-  type: {{ .Values.service.type }}
+  type: LoadBalancer
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 80
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    {{- include "hello-kubernetes.selectorLabels" . | nindent 4 }}
+
