--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -63,5 +63,5 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |- 
-        kubectl get nodes 
-        helm version
+        helm install hell_sbis hello-kubernete/deploy/helm/hello-kubernetes/ -f deploy/helm/hello-kubernetes/templates/values.yaml
+       
