--- a/hello-kubernete/deploy/helm/hello-kubernetes/templates/service.yaml
+++ b/hello-kubernete/deploy/helm/hello-kubernetes/templates/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-kubernetes
+  name: {{ include "hello-kubernetes.name" . }}
+  labels:
+    {{- include "hello-kubernetes.labels" . | nindent 4 }}
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
+    - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
-
+  selector:
+    {{- include "hello-kubernetes.selectorLabels" . | nindent 4 }}
