--- a/hello-kubernete/deploy/helm/hello-kubernetes/values.yaml
+++ b/hello-kubernete/deploy/helm/hello-kubernetes/values.yaml
@@ -15,8 +15,8 @@ deployment:
   replicaCount: 2
   container:
     image:
-      repository: "registry.gitlab.com/mishneg/hello_sbis" #paulbouwer/hello-kubernetes
-      tag: "" # uses chart appVersion if not provided
+      repository: "registry.gitlab.com/mishneg/hello_sbis/hello" #paulbouwer/hello-kubernetes
+      tag: "1.0.0" # uses chart appVersion if not provided
       pullPolicy: IfNotPresent
     port: 8080
 
