--- a/hello-kubernete/deploy/helm/hello-kubernetes/Chart.yaml
+++ b/hello-kubernete/deploy/helm/hello-kubernetes/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: hello-kubernetes
+name: hello-kubernetes-1.0.0
 description: A demo application for a Kubernetes cluster.
 type: application
 version: 1.0.0
